Fix column wrapping

--- a/package_monitor/static/package_monitor/css/package_list.css
+++ b/package_monitor/static/package_monitor/css/package_list.css
@@ -10,6 +10,26 @@
     word-wrap: break-word;
 }
 
+#tab_package_list tbody td:nth-child(1) {
+    white-space: nowrap;
+}
+
+#tab_package_list tbody td:nth-child(2) {
+    white-space: nowrap;
+}
+
+#tab_package_list tbody td:nth-child(3) {
+    white-space: nowrap;
+}
+
+#tab_package_list tbody td:nth-child(5) {
+    white-space: nowrap;
+}
+
+#tab_package_list tbody td:nth-child(6) {
+    white-space: nowrap;
+}
+
 .dotted_underline {
     text-decoration: underline;
     text-decoration-style: dotted;
